--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "sonner": "^1.2.3",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
