--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-reveal": "^1.2.2",
     "sonner": "^1.2.3",
+    "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
