--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@bentogrid/core": "^1.1.1",
     "@clerk/nextjs": "^4.27.1",
+    "@clerk/themes": "^1.7.9",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
     "@mui/system": "^5.14.18",
     "@prisma/client": "^5.6.0",
@@ -26,22 +28,26 @@
     "@uploadthing/react": "^6.0.2",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^1.41.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.3",
+    "next-cloudinary": "^5.10.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-reveal": "^1.2.2",
     "sonner": "^1.2.3",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.0.3",
+    "vaul": "^0.7.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
