--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@bentogrid/core": "^1.1.1",
     "@clerk/nextjs": "^4.27.1",
     "@clerk/themes": "^1.7.9",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
     "@mui/system": "^5.14.18",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -40,14 +39,12 @@
     "react-fast-marquee": "^1.6.2",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
-    "react-reveal": "^1.2.2",
     "sonner": "^1.2.3",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.0.3",
-    "vaul": "^0.7.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
