Course CRUD - New Routes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,41 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/Thumbs.db": true,
+    "**/.trunk/*actions/": true,
+    "**/.trunk/*logs/": true,
+    "**/.trunk/*notifications/": true,
+    "**/.trunk/*out/": true,
+    "**/.trunk/*plugins/": true,
+    "node_modules": true,
+    ".next": true,
+    ".vscode": true,
+    "scripts": true,
+    ".eslintrc.json": true,
+    ".gitignore": true,
+    "next-env.d.ts": true,
+    "tsconfig.json": true,
+    "tailwind.config.ts": true,
+    "postcss.config.js": true,
+    "package-lock.json": true,
+    "next.config.js": true,
+    "components.json": true,
+    ".env": true
   },
   "hide-files.files": [
-    "node_modules"
+    "node_modules",
+    ".next",
+    ".vscode",
+    "scripts",
+    ".eslintrc.json",
+    ".gitignore",
+    "next-env.d.ts",
+    "tsconfig.json",
+    "tailwind.config.ts",
+    "postcss.config.js",
+    "package-lock.json",
+    "next.config.js",
+    "components.json",
+    ".env"
   ],
   "editor.tokenColorCustomizations": {
     "comments": "",
