--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-icons": "^4.12.0",
     "react-player": "^2.13.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.10.3",
     "sonner": "^1.2.3",
     "stripe": "^14.8.0",
     "swiper": "^11.0.5",
