--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nahhas-lms",
-  "version": "0.1.0",
+  "version": "1.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -57,6 +57,7 @@
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.0",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
